homepage alignment corrected

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -282,9 +282,11 @@ a:active {
 
 #categories-list-container {
     margin-top: 0.5em;
-    margin-bottom: 0.5em;
     background-color: #fff;
     min-width: 180px;
+}
+#categories-list-container md-list {
+    padding: 0px 0px;
 }
 
 #categories-list-container > span {
